--- a/css/style.css
+++ b/css/style.css
@@ -1,186 +1,5 @@
-body{
-	color:#fff;
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-.menu-1{
-	height: 60px;
-	background: rgba(0, 255, 200, 0);
-}
-.slider-1, .slider-2, .slider-3, .slider-4{
-	height: 100vh;
-	text-align: center;
-}
-.slider-1{
-	background: #bdca0a;
-}
-.slider-2{
-	background: #0ad8a4;
-}
-.slider-3{
-	background: #e03e36;
-}
-.slider-4{
-	background: #ff7c38;
-	
-	background-size: cover;
-}
-img{
-	height: 655px;
-	width: 1400px;
-}
-
-.footer{
-	color:#fff;
-	text-align: center;
-	padding: 10px;
-}
-
-.centrado{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-
-.a{
-	height: 60px;
-	width: 90px;
-}
-
-.form{
-	width: 50%;
-	margin-top: 100px;
-	margin-right: 30px;
-	margin-left: auto;
-    margin-right: auto;
-	
-}
-.center{
-text-align: center;
-margin-bottom: 20px;
-}
-
-.p1{
-	 margin-left: 45px;
-	 margin-bottom: 10px;
-}
-
-.p4{
-	margin-left: 45px;
-	margin-top: 30px;
-	margin-bottom: 20px;
-}
-
-.fm{
-background:  rgb(34, 195, 235);
-padding-top: 20px;
-border: 10px double #fff;
-
-
-}
-
-.buton{
-	margin-left: 40px;
-	margin-bottom: 30px;
-	color: rgb(182, 17, 17);
-	background: #fff;
-}
-
-
-.aviso{
-	margin-left: 40px;
-	margin-bottom: 30px;
-	border: 15;
-}
-
-.aviso1{
-	margin-left: 40px;
-	margin-bottom: 30px;
-	border: 15;
-	width: 40px;
-}
-
-.posicion{
-	background: red;
-}
-
-.img1{
-	width: 100px;
-	height: 90px;
-	margin-bottom: 30px;
-	margin-top: 30px;
-}
-
-
-.cuadro{
-	width: 27%;
-	height: 400px;
-	background: rgb(236, 160, 7);
-	text-align: center;
-	margin-top: 50px;
-	margin-left: 60px;
-	float: left;
-	margin-bottom: 0px;
-}
-
-.cual{
-	background: rgb(245, 203, 15);
-}
-.cuad{
-	background: rgb(230, 228, 225);
-	text-transform: uppercase;
-}
-
-.conteiner{
-	float:left ;
-	text-align: center;
-	margin-top: 30px;
-	background:rgb(221, 93, 19) ;
-	width: 100%;
-	
-}
-
-.cont{
-	width: 200px;
-	height: 234px;
-	
-}
-
-.cont1{
-	margin-left: 230px;
-}
-
-.ws{
-	text-align: center;
-	float: left;
-	margin-right: 100px;
-	text-align: center;
-	margin-top: 50px;
-	margin-bottom: 100px;
-}
-
-.h{
-	margin-top: 0px;
-}
-
-.section2{
-	width: 100%;
-	height:500px;
-	background: rgb(243, 243, 243);
-}
-
-.section1{
-	width: 100%;
-	height:500px;
-}
-
-footer{
-	background: rgb(34, 194, 235);
-	height: 40px;
-}
-
-.row{
-	width: 1500px;
-}
-
-
