--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,21 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+body{
+	font-family: 'Open Sans' sans-serif;
+}
+.contenedor{
+	width: 90%;
+	max-width: 1200px;
+	overflow: hidden;
+	margin: auto;
+	padding: 60px 0;
+}
+head{
+	height: 100vh;
+	background-image: linear-gradient(to top, rgba(161, 140, 209, 0.5) 0%, rgba(251, 194, 235, 0.5) 100%), url(../img/6.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+}
