--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,13 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+
 body{
 	font-family: 'Open Sans' sans-serif;
 }
+
+
 .contenedor{
 	width: 90%;
 	max-width: 1200px;
@@ -13,7 +17,9 @@ body{
 	margin: auto;
 	padding: 60px 0;
 }
-head{
+
+
+header{
 	height: 100vh;
 	background-image: linear-gradient(to top, rgba(161, 140, 209, 0.5) 0%, rgba(251, 194, 235, 0.5) 100%), url(../img/6.jpg);
 	background-repeat: no-repeat;
