--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,12 @@ header{
 	background-attachment: fixed;
 	background-position: center;
 }
+
+
+head{
+	padding: 0;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
