--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
 }
 
 
+:root{
+	scroll-behavior: smooth;
+}
+
 body{
 	font-family: 'Open Sans' sans-serif;
 }
@@ -35,4 +39,32 @@ header{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
+	color: white;
+}
+
+.inicio{
+	position: fixed;
+	top: 30px;
+	right: 30px;
+	background: white;
+	width: 40px;
+	height: 40px;
+	cursor: pointer;
+	border-radius: 10px;
+	box-shadow: 0 0 6px rgba(0,0,0.5);
+}
+
+.menu-navegacion{
+	position: relative;
+	top: 0;
+	right: 0;
+	width: 30vw;
+	height: 100%;
+	background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	box-shadow: 0 0 6px rgba(0,0,0.5);
 }
