--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ header{
 	height: 40px;
 	cursor: pointer;
 	border-radius: 10px;
-	box-shadow: 0 0 6px rgba(0,0,0.5);
+	box-shadow: 0 0 6px rgba(0, 0, 0 .5);
 }
 
 .menu-navegacion{
@@ -66,5 +66,16 @@ header{
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-	box-shadow: 0 0 6px rgba(0,0,0.5);
+	/* transition: transform .3s ease-in-out; */
+	transform: translate(330%);
+	box-shadow: 0 0 6px rgba(0, 0, 0 .5);
+}
+
+.spread{
+	transform: translate(0);
+}
+
+.menu-navegacion{
+	color: white;
+	text-decoration: none;
 }
