--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body{
 
 header{
 	height: 100vh;
-	background-image: linear-gradient(to top, rgba(161, 140, 209, 0.5) 0%, rgba(251, 194, 235, 0.5) 100%), url(../img/6.jpg);
+	background-image: linear-gradient(to top, rgba(161, 140, 209, 0.4) 0%, rgba(251, 194, 235, 0.4) 100%), url(../img/6.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
@@ -66,7 +66,7 @@ header{
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-	/* transition: transform .3s ease-in-out; */
+	transition: transform .3s ease-in-out;
 	transform: translate(330%);
 	box-shadow: 0 0 6px rgba(0, 0, 0 .5);
 }
@@ -78,4 +78,14 @@ header{
 .menu-navegacion{
 	color: white;
 	text-decoration: none;
+}
+
+.titulo{
+	font-size: 60px;
+	margin-bottom: 15px;
+}
+
+.copy{
+	font-weight: 300;
+	font-size: 25px;
 }
