--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ header{
 }
 
 .menu-navegacion{
-	position: relative;
+	position: fixed;
 	top: 0;
 	right: 0;
 	width: 30vw;
@@ -67,7 +67,7 @@ header{
 	justify-content: space-evenly;
 	align-items: center;
 	transition: transform .3s ease-in-out;
-	transform: translate(330%);
+	transform: translate(110%);
 	box-shadow: 0 0 6px rgba(0, 0, 0 .5);
 }
 
