--- a/css/style.css
+++ b/css/style.css
@@ -92,10 +92,18 @@ header{
 
 /*Nuestro servicios*/
 
-.subtitulos{
+.subtitulo{
 	text-align: center;
 	font-weight: 300;
 	color: #9f8ad0;
 	margin-bottom: 40px;
 	font-size: 40px;
 }
+
+.contenedor-servicio{
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
