--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,6 @@ header{
 	height: 30px;
 	color: white;
 	text-align: center;
-	border-radius: 50px;
+	border-radius: 50%;
 	font-weight: 700;
 }
