--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,20 @@ header{
 	line-height: 30px;
 	margin-right: 5px;
 }
+
+.galeria{
+	background: #f2f2f2;
+}
+
+.contenedor-galeria{
+	display: flex;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+}
+
+.img-galeria{
+	width: 30%;
+	display: block;
+	margin-bottom: 15px;
+	box-shadow: 0 0 0 6px;
+}
