--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ header{
 	height: 40px;
 	cursor: pointer;
 	border-radius: 10px;
-	box-shadow: 0 0 6px rgba(0, 0, 0 .5);
+	box-shadow: 0 0 6px rgba(0, 0, 0, .5);
 }
 
 .menu-navegacion{
@@ -68,7 +68,7 @@ header{
 	align-items: center;
 	transition: transform .3s ease-in-out;
 	transform: translate(110%);
-	box-shadow: 0 0 6px rgba(0, 0, 0 .5);
+	box-shadow: 0 0 6px rgba(0, 0, 0, .5);
 }
 
 .spread{
@@ -151,5 +151,5 @@ header{
 	width: 30%;
 	display: block;
 	margin-bottom: 15px;
-	box-shadow: 0 0 0 6px;
+	box-shadow: 0 0 0 6px rgba(0, 0, 0, .5);
 }
