--- a/css/style.css
+++ b/css/style.css
@@ -154,3 +154,30 @@ header{
 	box-shadow: 0 0 0 6px rgba(0, 0, 0, .5);
 	cursor: pointer;
 }
+
+.img-light{
+	position: fixed;
+	background: rgba(0, 0, 0, .5);
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.agregar-imagen{
+	width: 60%;
+	border-radius: 10px;
+
+}
+
+.close{
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	width: 40px;
+	cursor: pointer;
+	
+}
