--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ header{
 	cursor: pointer;
 }
 
-.img-light{
+.imgagen-light{
 	position: fixed;
 	background: rgba(0, 0, 0, .5);
 	width: 100%;
@@ -179,5 +179,5 @@ header{
 	right: 15px;
 	width: 40px;
 	cursor: pointer;
-	
+
 }
