--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ header{
 	cursor: pointer;
 }
 
-.imgagen-light{
+.imagen-light{
 	position: fixed;
 	background: rgba(0, 0, 0, .5);
 	width: 100%;
