--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ header{
 
 .imagen-light{
 	position: fixed;
-	background: rgba(0, 0, 0, .5);
+	background: rgba(0, 0, 0, .6);
 	width: 100%;
 	height: 100%;
 	top: 0;
@@ -165,13 +165,27 @@ header{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	transform: translate(100%);
+	transition: transform .2s ease-in-out;
+}
+
+.show{
+	transform: translate(0);
 }
 
 .agregar-imagen{
 	width: 60%;
 	border-radius: 10px;
+	transform: scale(0);
+	transition: transform .3s .2s;
 
 }
+
+
+.showImage{
+	transform: scale(1);
+}
+
 
 .close{
 	position: absolute;
