--- a/css/style.css
+++ b/css/style.css
@@ -147,11 +147,11 @@ header{
 	flex-wrap: wrap;
 }
 
-.img-galeria{
+.img-galeria{ 
 	width: 30%;
 	display: block;
 	margin-bottom: 15px;
-	box-shadow: 0 0 0 6px rgba(0, 0, 0, .5);
+	box-shadow: 0 0 6px rgba(0, 0, 0, .5);
 	cursor: pointer;
 }
 
@@ -238,3 +238,54 @@ footer{
 	padding-bottom: 40px;
 	
 }
+
+.contact-us{
+	width: 40%;
+	color: #fff;
+}
+
+.brand{
+	font-weight: 500;
+	 font-size: 40px;
+}
+
+.brand+p{
+	font-weight: 500 ;
+}
+
+.social-media{
+	width: 50%;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.social-media-icon{
+display: inline-block;
+margin-left: 20px;
+width: 60px;
+height: 60px;
+border: 1px solid #fff;
+border-radius: 50%;
+text-align: center;
+color: #fff;
+}
+
+.social-media-icon:hover{
+	background: #fff;
+	color: #764ba2;
+}
+
+.social-media-icon i{
+	font-size: 30px;
+	line-height: 60px;
+
+}
+ .line{
+	 width: 90%;
+	 max-width: 1200px;
+	 margin: 0 auto;
+	 height: 2px;
+	 background: #fff;
+	 margin-bottom: 60px;
+ }
+
