--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ header{
 
 
 .head{
+	text-align: center;
 	padding: 0;
 	height: 100%;
 	display: flex;
@@ -147,7 +148,8 @@ header{
 	flex-wrap: wrap;
 }
 
-.img-galeria{ 
+.img-galeria{
+	object-fit: cover; 
 	width: 30%;
 	display: block;
 	margin-bottom: 15px;
@@ -174,6 +176,7 @@ header{
 }
 
 .agregar-imagen{
+	object-fit: cover;
 	width: 60%;
 	border-radius: 10px;
 	transform: scale(0);
@@ -289,3 +292,98 @@ color: #fff;
 	 margin-bottom: 60px;
  }
 
+ @media screen and (max-width:800px){
+    .menu-navegacion{
+	width: 50vw;
+}
+
+.titulo{
+	font-size: 40px;
+}
+
+.contenedor-servicio img{
+	width: 80%;
+	margin-bottom: 40px;
+
+}
+
+.imagen-servicio{
+	width: 80%;
+}
+
+.service{
+	margin-bottom: 30px;
+}
+
+.agregar-imagen{
+	width: 80%;
+}
+
+.img-galeria{
+	width: 45%;
+}
+
+.cont-expert{
+	width: 80%;
+}
+
+.footer-content{
+	justify-content: center;
+}
+
+.social-media{
+	width: 80%;
+	justify-content: space-evenly;
+}
+
+.social-media-icon{
+	margin-left: 0;
+}
+
+.social-media i{
+	margin-left: 0;
+}
+
+.contact-us{
+	text-align: center;
+	width: 80%;
+	margin-bottom: 40px;
+}
+
+ }
+
+ @media screen and (max-width:500px) {
+	.menu-navegacion{
+		width: 65vw;
+	} 
+
+	.inicio{
+		top: 20px;
+		right: 20px;
+	}
+
+	.titulo{
+		font-size: 30px;
+	}
+
+	.subtitulo{
+		font-size: 30px;
+	}
+
+	.agregar-imagen{
+		width: 95%;
+	}
+
+	.img-galeria{
+		width: 95%;
+	}
+
+.social-media{
+	width: 100%;
+}
+
+.contact-us{
+	width: 90%;
+}
+
+ }
