--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ header{
 	justify-content: space-evenly;
 	align-items: center;
 	flex-wrap: wrap;
+	text-transform: uppercase;
 }
 
 .contenedor-servicio img{
