--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ header{
 .menu-navegacion{
 	position: fixed;
 	top: 0;
+	width: 30%;
 	right: 0;
 	width: 30vw;
 	height: 100%;
@@ -76,7 +77,7 @@ header{
 	transform: translate(0);
 }
 
-.menu-navegacion{
+.menu-navegacion a{
 	color: white;
 	text-decoration: none;
 }
